fix(style): decrease z-index property

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,7 +259,7 @@ strong {
 
 .btn-toc {
 	position: fixed;
-	z-index: 999;
+	z-index: 3;
 	width: 30px;
 	right: 0;
 	bottom: 0;
@@ -288,16 +288,16 @@ strong {
 }
 
 nav {
-    height: 80;
+    height: 80px;
     display: flex;
     align-items: center;
-    z-index: 999;
+    z-index: 3;
     background: #003067
 }
 
 @media(max-width: 1200px) {
     nav {
-        height: 80;
+        height: 80px;
         display: flex;
         align-items: center;
         z-index: 1;
